--- a/estilos/style.css
+++ b/estilos/style.css
@@ -53,14 +53,14 @@ nav a {
     text-align: center;
 }
 
-.botão {
+.botao {
     background-color: #B908F6;
     border-radius: 20px;
     font-family: "Gilroy eb";
     transition: 0.5s;
 }
 
-.botão:hover {
+.botao:hover {
     background-color: white;
     color: #3d044e;
     transition: 0.5s;
@@ -77,7 +77,7 @@ nav a {
     justify-content: end;
     height: 87vh;
     background-color: black;
-    background-image: url(../imgs/RickAndMorty7_Takeover_mobile_alt_keyart.avif);
+    background-image: url(https://hbomax-images.warnermediacdn.com/2023-09/RickAndMorty7_Takeover_mobile_alt_keyart.jpg?host=wme-hbomax-drupal-prod.s3.amazonaws.com&w=767);
     background-size: contain;
     background-repeat: no-repeat;
 }
