--- a/estilos/style.css
+++ b/estilos/style.css
@@ -77,7 +77,7 @@ nav a {
     justify-content: end;
     height: 87vh;
     background-color: black;
-    background-image: url(../imgs/RickAndMorty7_Takeover_mobile_alt_keyart.jpg);
+    background-image: url(../imgs/banner.jpg);
     background-size: contain;
     background-repeat: no-repeat;
 }
